--- a/CHANGES
+++ b/CHANGES
@@ -104,6 +104,8 @@ o Roxen can now count in japanese, using Kanji. It is also supposed to
   of japanese, someone who knows the language better might want to
   check this module (<accessed lang=kanji>, as an example)
 
+o <date> and <modified> now correctly counts in Swedish.
+
 o Expiry time of RXML is <i>no longer set at all</i>. In the future,
   it will be set automatically to a sensible value, depending on the
   contents of the pages.  Before it was set to one second in the past,
