--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,9 @@
+Changes since Roxen 1.1 alpha
+-----------------------------------------------
+
+o Maori language module added.
+
+
 Changes since Roxen 1.0 
 -----------------------------------------------
 
