--- a/README
+++ b/README
@@ -1,10 +1,10 @@
-Roxen 1.0 prerelease -- source version
+Roxen 1.1 prerelease -- source version
 ++++++++++++++++++++++++++++++++++++++
 
 Copyright 
 ---------
 
-Roxen 1.0 is Copyright © to Informationsvävarna AB, 1994 - 1996
+Roxen 1.1 is Copyright © to Informationsvävarna AB, 1994 - 1996
 uLPC is Copyright © to Fredrik Hübinette, 1994 - 1996
 
 This software is distributed under GPL, see the file COPYING for
@@ -26,9 +26,10 @@ tools/ 		A tool that will dump the Accessed database in a
                 (read the file for more information about what it is).
 		and a configuration file decoder and encoder.
 
-server/ 	The uLPC objects and other misc source that is the
+server/ 	The Pike objects and other misc source that is the
 		core of the Roxen software.
 
-ulpc/	  	The source to the language used (Micro LPC, object
+pike/	  	The source to the language used (Pike, object
 		oriented C-like language). Written by Fredrik
 		Hübinette, hubbe@signum.se
+
