--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,11 @@
+Changes since Roxen 1.1 alpha 2
+-----------------------------------------------
+
+o Italian language module added.
+
+o Renamed the kanji module to japanese.
+
+
 Changes since Roxen 1.1 alpha
 -----------------------------------------------
 
