--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,8 @@ Changes since Roxen 1.1 alpha 2
 
 o Italian language module added.
 
+o Portuguese language module added.
+
 o Renamed the kanji module to japanese.
 
 
