Makefile.in  	Fixat lite buggar.
CHANGES INSTALLING README:

	Uppdaterade, release specifika (speciellt INSTALLING). Måste
	uppdateras innan varje ny release.


server/base_server/configuration.pike

	Bignum buggade om man använde Mpz. Vet inte varför. Ett
	projekt att fixa tills nästa release.

server/base_server/disk_cache.pike

	Bugfixar. Funkar nu.

server/base_server/mainconfig.pike

	<blockquote> nu del av BODY

server/base_server/privs.pike server/base_server/roxen.pike

	Buggade vid uppgradering, eftersom roxen->variables->audit
	inte fanns.

server/base_server/roxenlib.pike

	Ingen aning om vad jag gjorde här...

server/base_server/config/describers.pike

	Ändrade ...More till More Documentation. Snyggare så.

server/bin/garbagecollector.pike

	stdin gick inte att få non-blocking. Använde
		object st = File("stdin");
 	istället.

server/bin/install.pike

	add_constant(roxen, this_object()) - privs.pike ville inte
	kompilera annars.

server/etc/config.html server/etc/restart.html server/etc/welcome.html

	bugfixar (blockquote...).

server/modules/filesystems/userfs.pike

	bugfix i real_file - se CHANGES

server/modules/filters/htaccess.pike

	Stavfel rättat + pekare till NCSAs htaccess dokumentation
	adderad

server/modules/graphics/graphic_text.pike

	bugfix i bevel();

server/modules/logging/home_logger.pike

	bugfix, se CHANGES

server/modules/proxies/proxy.pike

	bugfixar

server/modules/tags/indirect_href.pike

	-stavfel, +syntax exempel

server/fonts/32/urw_itc_avant_garde-demi-r

	används ju at graphics_text.pike

Rev: CHANGES:1.13
Rev: INSTALLING:1.3
Rev: Makefile.in:1.3
Rev: README:1.4
Rev: server/base_server/config/describers.pike:1.12
Rev: server/base_server/configuration.pike:1.9
Rev: server/base_server/disk_cache.pike:1.10
Rev: server/base_server/mainconfig.pike:1.26
Rev: server/base_server/privs.pike:1.2
Rev: server/base_server/roxen.pike:1.20
Rev: server/base_server/roxenlib.pike:1.6
Rev: server/bin/garbagecollector.pike:1.5
Rev: server/bin/in

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Changes since Roxen 1.1 alpha 2
 -----------------------------------------------
 
+o "make install" now moves the old server directory to server.old.
+
 o Italian language module added.
 
 o Portuguese language module added.
@@ -8,14 +10,28 @@ o Portuguese language module added.
 o Renamed the kanji module to japanese.
 
 o The configuration interface has been optimized about a factor of
-  1000.  It should fast enough now.
+  1000.  It should fast enough now. It has also changed appearance.
 
-o Disk cache fixed again. Thanks to Wilhelm Koehler <wk@cs.tu-berlin.de>
+o Disk cache fixed again. Thanks to Wilhelm Koehler <wk@cs.tu-berlin.de>.
+
+o Home logger fixed. Thanks to Wilhelm Koehler.
+
+o bug in real_file in the user filesystem fixed. If the file was 0
+  bytes long, Roxen decided that the file didn't exist.
 
 o Fix in hostname lookup code, again, Thanks to Wilhelm Koehler
 
+o Option in the http proxy module to enable/disable caching of pages
+  which get cookies sent to them.
+  
+o The default font for the graphics text module is now in the distribution. 
+  Hopefully that module is now useful!
 
-
+o Some more debug information added. Check "Debug information for
+  developers". It lists the number of objects, mappings, etc. and
+  their memory usage, as well as all objects that has more than five
+  clones. Maybe not all that usefull for the everyday user, but good
+  for debugging.
  
 Changes since Roxen 1.1 alpha
 -----------------------------------------------
