Fixes, nicer background image.
Rev: CHANGES:1.19
Rev: server/base_server/roxen.pike:1.23
Rev: server/etc/restart.html:1.7
Rev: server/etc/shutdown.html:1.4
Rev: server/modules/scripting/cgi.pike:1.8
Rev: server/modules/scripting/fcgi.pike:1.6
Rev: server/roxen-images/background.gif:1.6

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,11 @@
 Changes since Roxen 1.1 alpha 3
 -----------------------------------------------
 
+o Trust levels should really work as they are supposed to now.
+
+o The spacy background image (and the <blockquote> that was needed for
+  it) removed and replaced with a more slim version.
+  
 o Some changes to the graphics_text module. It should be somewhat
   faster now, and also has some new features.
 
