Error log i restart.html pekade fel.  Fix i roxen.pike så att den inte alltid försöker skapa alla bibliotek till logfilen om de redan finns.
Rev: CHANGES:1.23
Rev: server/base_server/roxen.pike:1.26
Rev: server/etc/restart.html:1.9

--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,10 @@
 Changes since Roxen 1.1 alpha 4
 -----------------------------------------------
 
+o When opening the logfile, Roxen only tries to do mkdirhier if it is
+  needed. Thanks to Stephen R. van den Berg (srb@cuci.nl) for the
+  patch.
+
 o Roxen didn't write entries to 'Accessed.names' file, because this
   file was opened read-only. Fixed. Thanks to Jordi Murgo.
 
