--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 Changes since Roxen 1.1 alpha 4
 -----------------------------------------------
 
+o fixed protocols/ftp.pike. It bugged.
+
 o When the proxy authentification was fixed, as bug was added that
   broke normal user authenficiation.
 
