--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Roxen 1.1 prerelease -- source version
-++++++++++++++++++++++++++++++++++++++
+Roxen 1.1 source version
+++++++++++++++++++++++++
 
 Copyright 
 ---------
