Bugfix i allow user=xxx av Jordi Murgo.
Rev: CHANGES:1.26
Rev: INSTALLING:1.6
Rev: README:1.6
Rev: server/base_server/module.pike:1.9

--- a/CHANGES
+++ b/CHANGES
@@ -1,8 +1,11 @@
 Changes since Roxen 1.1 alpha 4
 -----------------------------------------------
 
-o fixed protocols/ftp.pike. It bugged.
+o Before allow user=foo,bar granted access to use foobar and bargaz as
+  well. Fixed with patch from Jordi Murgo (jordi@lleida.net).
 
+o fixed protocols/ftp.pike. It bugged.
+  
 o When the proxy authentification was fixed, as bug was added that
   broke normal user authenficiation.
 
