--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,16 @@
 Changes since Roxen Challenger 1.1 
 -----------------------------------------------
 
+o Support for shadow passwords added to userdb (method shadow). The
+  default method is always set to file. If getpwent is used on a system
+  with thousands of users, it takes a VERY long time to read all the
+  users. 
+
+o <apre href=#foo> and more now works as expected.
+
+o Install script now doesn't append the domain name if it's already in
+  the hostname (which is the case in BSD UNIXes).
+
 o etc/extensions is now more complete.
 
 o The convert_accessed.pike script fixed. Someone forgot committing
