*** empty log message ***
Rev: CHANGES:1.32
Rev: server/base_server/disk_cache.pike:1.11
Rev: server/base_server/module.pike:1.10
Rev: server/bin/install.pike:1.8
Rev: server/etc/supports:1.10
Rev: server/languages/catala.pike:1.3
Rev: server/modules/scripting/cgi.pike:1.9
Rev: server/modules/tags/htmlparse.pike:1.14

--- a/CHANGES
+++ b/CHANGES
@@ -6,7 +6,10 @@ o Support for shadow passwords added to userdb (method shadow). The
   with thousands of users, it takes a VERY long time to read all the
   users. 
 
-o <apre href=#foo> and more now works as expected.
+o allow/deny user using 'any' was broken in the last fix. This is, of
+  course, fixed now.
+
+o <apre href=#foo> and others now works as expected.
 
 o Install script now doesn't append the domain name if it's already in
   the hostname (which is the case in BSD UNIXes).
@@ -2145,3 +2148,4 @@ o Changed some of the default settings, and added some more
 o In modules/configure.lpc: Table code cleaned, new variable added: More 
   options (advanced), adds a reload from file and a refresh icon for 
   module developers, mainly (and for me, ofcourse...)
+
